results/SVCOMP/conversational/log-SubString01-2024_03_17_19_30_42.txt
public class SubString01 {

    //@ ensures \result <==> letters.substring(20).equals("ganddroppingthem") && letters.substring(6, 10).equals("file");
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

}
/home/max/Documents/JMLGPT/tmp/SubString01.java:3: error: cannot find symbol
    //@ ensures \result <==> letters.substring(20).equals("ganddroppingthem") && letters.substring(6, 10).equals("file");
                             ^
  symbol:   variable letters
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:3: error: cannot find symbol
    //@ ensures \result <==> letters.substring(20).equals("ganddroppingthem") && letters.substring(6, 10).equals("file");
                                                                                 ^
  symbol:   variable letters
  location: class SubString01
2 errors

public class SubString01 {

    //@ ensures \result <==> "attachfilesbydragginganddroppingthem".substring(20).equals("ganddroppingthem") && "attachfilesbydragginganddroppingthem".substring(6, 10).equals("file");
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

}
